--- a/ShopFilip/appsettings.json
+++ b/ShopFilip/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "ShopFilip": "Data Source=DESKTOP-I0TJ6JC\\TEW_SQLEXPRESS;Initial Catalog=FilipShop;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;"
+    "ShopFilip": "Data Source=DESKTOP-I0TJ6JC\\TEW_SQLEXPRESS;Initial Catalog=OnlineShop;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;"
   },
   "AllowedHosts": "*"
 } 
